Gap bug fixed

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 nav {
   grid-area: nav;
   background-color: #bdd5ea;
+  margin-top: -2%;
   display: flex;
   position: fixed;
   width: 100%;
@@ -67,7 +68,7 @@ h1 {
 }
 /*SECTION*/ 
 section {
-  margin-top: 118px;
+  margin-top: 19%;
   grid-area: section;
   background-color: #577399;
   display: grid;
